--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,14 @@
 {% extends 'ds_base.html' %}
 {% load static %}
 {% block content %}
+<div id="db-wrapper">
+      <!-- navbar vertical -->
+      {% include 'partials/navbar-vertical.html' %}
+       <!-- Page content -->
+      <div id="page-content">
+        {% include 'partials/header.html' %}
+        <!-- Container fluid -->
+        <div class="bg-primary pt-10 pb-21"></div>
         <div class="container-fluid mt-n22 px-6">
           <div class="row">
             <div class="col-lg-12 col-md-12 col-12">
@@ -306,4 +314,6 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
 {% endblock content %}
