--- a/appUser/templates/signup.html
+++ b/appUser/templates/signup.html
@@ -31,22 +31,37 @@
 					<img src="{% static 'images/img-01.png' %}" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="{% url 'dsuser:user-login' %}" method="post">
+				<form class="login100-form validate-form" action="{% url 'dsuser:user-signup' %}" method="post">
             		{% csrf_token %}
 					<span class="login100-form-title">
-						If you are a simple visitor just click on login button!
+						Registration
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Username is required">
-						<input class="input100" type="text" name="username" placeholder="Username" value="visitor">
+                        {{ form.username }}
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
 					</div>
 
+					<div class="wrap-input100 validate-input" data-validate = "Username is required">
+                        {{ form.email }}
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
+
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="password" placeholder="Password" value="rootroot">
+						{{ form.password1 }}
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+						<input class="input100" type="password" name="password2" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -55,23 +70,14 @@
 					
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Login
+							Sign Up
 						</button>
 					</div>
 
-					<div class="text-center p-t-12">
-						<span class="txt1">
-							Forgot
-						</span>
-						<a class="txt2" href="#">
-							Username / Password?
-						</a>
-					</div>
-
 					<div class="text-center p-t-136">
-						<a class="txt2" href="{% url 'dsuser:user-signup' %}">
-							Create your Account
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						<a class="txt2" href="{% url 'dsuser:user-login' %}">
+							I have an Account
+							<i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
 				</form>
