--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -78,7 +78,7 @@
         <a class="rounded-circle" href="#" role="button" id="dropdownUser"
           data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="avatar avatar-md avatar-indicators avatar-online">
-            <img alt="avatar" src="{% static 'assets/images/avatar/avatar-1.jpg' %}"
+            <img alt="avatar" src="{{ user.profile.image.url }}"
               class="rounded-circle" />
           </div>
         </a>
@@ -88,7 +88,7 @@
 
 
             <div class="lh-1 ">
-              <h5 class="mb-1"> John E. Grainger</h5>
+              <h5 class="mb-1"> {{ user.username }}</h5>
               <a href="#" class="text-inherit fs-6">View my profile</a>
             </div>
             <div class=" dropdown-divider mt-3 mb-2"></div>
@@ -103,29 +103,13 @@
               </a>
             </li>
             <li>
-              <a class="dropdown-item"
-                href="#">
-                <i class="me-2 icon-xxs dropdown-item-icon"
-                  data-feather="activity"></i>Activity Log
-              </a>
-
-
-            </li>
-
-            <li>
-              <a class="dropdown-item text-primary" href="#">
-                <i class="me-2 icon-xxs text-primary dropdown-item-icon"
-                  data-feather="star"></i>Go Pro
-              </a>
-            </li>
-            <li>
               <a class="dropdown-item" href="#">
                 <i class="me-2 icon-xxs dropdown-item-icon"
                   data-feather="settings"></i>Account Settings
               </a>
             </li>
             <li>
-              <a class="dropdown-item" href="{% static 'index.html' %}">
+              <a class="dropdown-item" href="{% url 'dsuser:user-logout' %}">
                 <i class="me-2 icon-xxs dropdown-item-icon"
                   data-feather="power"></i>Sign Out
               </a>
