add in dashboard page some links to LinkedIn, github..

--- a/templates/index.html
+++ b/templates/index.html
@@ -156,8 +156,8 @@
                               </div>
                             </div>
                             <div class="ms-3 lh-1">
-                              <h5 class="fw-bold mb-1"> <a href="#"
-                                  class="text-inherit">GitHub Satellite</a></h5>
+                              <h5 class="fw-bold mb-1"> <a href="https://github.com/larou2si" target="_blank"
+                                  class="text-inherit">GitHub</a></h5>
                             </div>
                           </div></td>
                         <td class="align-middle">120</td>
@@ -165,17 +165,17 @@
                         <td class="align-middle"><div class="avatar-group">
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-7.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-1.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-8.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-2.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-9.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-3.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm avatar-primary">
@@ -206,8 +206,8 @@
                               </div>
                             </div>
                             <div class="ms-3 lh-1">
-                              <h5 class="fw-bold mb-1"> <a href="#"
-                                  class="text-inherit">Webapp Design System</a>
+                              <h5 class="fw-bold mb-1"> <a href="https://www.linkedin.com/in/laroussi-mohamed/" target="_blank"
+                                  class="text-inherit">LinkedIn</a>
                               </h5>
                             </div>
                           </div></td>
@@ -217,17 +217,17 @@
                         <td class="align-middle"><div class="avatar-group">
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-13.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-1.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-14.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-2.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-15.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-3.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm avatar-primary">
@@ -249,58 +249,59 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="align-middle border-bottom-0"><div class="d-flex
+                        <td class="align-middle"><div class="d-flex
                             align-items-center">
                             <div>
-                              <div class="icon-shape icon-md border p-4 rounded-1">
+                              <div class="icon-shape icon-md border p-4 rounded
+                                bg-primary">
                                 <img
-                                  src="{% static 'assets/images/brand/github-logo.svg' %}"
+                                  src="{% static 'assets/images/brand/layers-logo.svg' %}"
                                   alt="">
                               </div>
                             </div>
                             <div class="ms-3 lh-1">
-                              <h5 class="fw-bold mb-1"> <a href="#"
-                                  class="text-inherit">Github Event Design</a>
+                              <h5 class="fw-bold mb-1"> <a href="https://leetcode.com/larou2si/" target="_blank"
+                                  class="text-inherit">LeetCode</a>
                               </h5>
-
                             </div>
                           </div></td>
-                        <td class="align-middle border-bottom-0">120</td>
-                        <td class="align-middle border-bottom-0"><span class="badge bg-info">Low</span></td>
-                        <td class="align-middle border-bottom-0"><div class="avatar-group">
+                        <td class="align-middle">108</td>
+                        <td class="align-middle"><span class="badge
+                            badge-success">Track</span></td>
+                        <td class="align-middle"><div class="avatar-group">
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-13.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-1.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-14.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-2.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm">
                               <img alt="avatar"
-                                src="{% static 'assets/images/avatar/avatar-15.jpg' %}"
+                                src="{% static 'assets/images/avatar/avatar-3.jpg' %}"
                                 class="rounded-circle">
                             </span>
                             <span class="avatar avatar-sm avatar-primary">
                               <span class="avatar-initials rounded-circle
-                                fs-6">+1</span>
+                                fs-6">+5</span>
                             </span>
                           </div></td>
-                        <td class="align-middle text-dark border-bottom-0"><div
-                            class="float-start me-3">75%</div>
+                        <td class="align-middle text-dark"><div
+                            class="float-start me-3">100%</div>
                           <div class="mt-2">
                             <div class="progress" style="height: 5px;">
-                              <div class="progress-bar" role="progressbar"
-                                style="width:75%" aria-valuenow="75"
-                                aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-success"
+                                role="progressbar" style="width:100%"
+                                aria-valuenow="100" aria-valuemin="0"
+                                aria-valuemax="100"></div>
                             </div>
                           </div>
 
                         </td>
                       </tr>
-
                     </tbody>
                   </table>
                 </div>
