--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -7,12 +7,23 @@
         data-feather="menu"
 
         class="nav-icon me-2 icon-xs"></i></a>
+
+
+    <div class="ms-lg-3 d-none d-md-none d-lg-block">
+      <a id="ML" onclick="mySideBar(this)" title="Machine Learning">ML</a>
+    </div>
+
+    <div class="ms-lg-3 d-none d-md-none d-lg-block">
+      <a id="DL" onclick="mySideBar(this)" title="Deep Learning Learning">DL</a>
+    </div>
+
     <div class="ms-lg-3 d-none d-md-none d-lg-block">
       <!-- Form -->
       <form class="d-flex align-items-center">
         <input type="search" class="form-control" placeholder="Search" />
       </form>
     </div>
+
     <!--Navbar nav -->
     <ul class="navbar-nav navbar-right-wrap ms-auto d-flex nav-top-wrap">
       <li class="dropdown stopevent">
