--- a/appUser/templates/login.html
+++ b/appUser/templates/login.html
@@ -59,18 +59,10 @@
 						</button>
 					</div>
 
-					<div class="text-center p-t-12">
-						<span class="txt1">
-							Forgot
-						</span>
-						<a class="txt2" href="#">
-							Username / Password?
-						</a>
-					</div>
 
 					<div class="text-center p-t-136">
 						<a class="txt2" href="{% url 'dsuser:user-signup' %}">
-							Create your Account
+							Register
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
