--- a/appUser/templates/campDashboard.html
+++ b/appUser/templates/campDashboard.html
@@ -46,6 +46,11 @@
                     <h3 class="mb-0 fw-bold text-white">Welcome {{ user.username }} !</h3>
                   </div>
                 </div>
+                {% if ncount %}
+                <div class="alert alert-info" role="alert">
+                        {{ ncount }} people poked you!
+                </div>
+                {% endif %}
               </div>
             </div>
           </div>
@@ -56,7 +61,7 @@
               <div class="card">
                 <!-- card header  -->
                 <div class="card-header bg-white border-bottom-0 py-4">
-                  <h4 class="mb-0">People you may want poke:</h4>
+                  <h4 class="mb-0">People you may want to poke:</h4>
                 </div>
                 <!-- table  -->
                 <div class="table-responsive">
@@ -82,7 +87,7 @@
                         </td>
                         <td class="align-middle">{{ person.username }}</td>
                         <td class="align-middle">{{ person.email }}</td>
-                        <td id="pk_{{person.id}}" class="align-middle">{{ person.profile.pokes }}</td>
+                        <td id="pk_{{person.id}}" class="align-middle">{{ person.profile.pokes }} Pokes</td>
                         <td class="align-middle">
                           <button onclick="pokeMeUp(this)" poked="{{person.id}}" type="button" class="btn btn-info">Poke</button>
                         </td>
@@ -95,6 +100,10 @@
               </div>
 
             </div>
+          </div>
+
+          <div class="row">
+
           </div>
         </div>
       </div>
